--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,11 @@
     "name": "jiangyu/sharding-preemption",
     "description": "A micro shard preemption framework.",
     "keywords": [
-        "sharding", "shard", "queue", "lock", "worker"
+        "sharding",
+        "shard",
+        "queue",
+        "lock",
+        "worker"
     ],
     "license": "MIT",
     "authors": [
@@ -17,10 +21,12 @@
             "Daemon\\Sharding\\": "src/"
         }
     },
+    "require-dev": {
+        "phpunit/phpunit": "4.8.*",
+        "mockery/mockery": "0.9.*"
+    },
     "require": {
         "php": ">=5.5",
-        "phpunit/phpunit": "4.8.*",
-        "mockery/mockery": "0.9.*",
         "symfony/var-dumper": "~3.0"
     }
 }
