--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_script:
 script: php vendor/bin/phpunit -c build/travis-ci.xml
 
 after_success:
-  - codecov
+  - bash <(curl -s https://codecov.io/bash)
 
 matrix:
   allow_failures:
