--- a/.travis.yml
+++ b/.travis.yml
@@ -20,9 +20,11 @@ before_script:
   - composer self-update
   - composer install --prefer-dist --no-interaction --dev -o
 
-script: php vendor/bin/phpunit -c build/travis-ci.xml
+script:
+  - php vendor/bin/phpunit -c build/travis-ci.xml
 
 after_success:
+  - codecov
   - bash <(curl -s https://codecov.io/bash)
 
 matrix:
