--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "4.8.*",
-        "mockery/mockery": "0.9.*"
+        "mockery/mockery": "0.9.*",
+        "codeclimate/php-test-reporter": "0.2.*"
     },
     "require": {
         "php": ">=5.5",
